Updates font same as index

--- a/kalman-filter.html
+++ b/kalman-filter.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="text-center site-header project-page-site-header">
+    <div class="container-fluid">
+        <header class="text-center site-header project-page-site-header" style="font-family: 'Josefin Sans', sans-serif;">
             <div class="text-center" id="logo">
                 <h1 class="logo"><a id="logo-link" href="#">mohana saraf</a></h1>
             </div>
