--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <div class="container-fluid">
         <header class="text-center site-header">
             <div class="text-center" id="logo">
-                <h1 class="logo"><a id="logo-link" href="#">mohana saraf</a></h1>
+                <h1 class="logo"><a id="logo-link" href="http://mohanasaraf.github.io/">mohana saraf</a></h1>
             </div>
             <div class="text-center" id="top-nav">
                 <nav class="navbar navbar-light navbar-expand-sm">
                     <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span>MENU</span></button>
-                        <div class="collapse navbar-collapse justify-content-center" id="navcol-1">
+                        <!-- <div class="collapse navbar-collapse justify-content-center" id="navcol-1">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item" role="presentation"><a class="nav-link active" href="#">WORK</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="About.html">ABOUT</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">RESUME</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link">CONTACT</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </div>
