--- a/robotic-manipulator.html
+++ b/robotic-manipulator.html
@@ -17,14 +17,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="text-center site-header project-page-site-header" style="font-family: 'Josefin Sans', sans-serif;">
-            <div class="text-center" id="logo">
-                <h1 class="logo"><a id="logo-link" href="#">mohana saraf</a></h1>
-            </div>
+    <div class="container">
+        <header class="text-center site-header ">
+            <!-- <div class="text-center" id="logo">
+                <h1 class="logo"><a id="logo-link" href="http://mohanasaraf.github.io/">mohana saraf</a></h1>
+            </div> -->
             <div class="text-center" id="top-nav">
                 <nav class="navbar navbar-light navbar-expand-sm">
-                    <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span>MENU</span></button>
+                    <!-- <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span>MENU</span></button>
                         <div class="collapse navbar-collapse justify-content-center" id="navcol-1">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">WORK</a></li>
@@ -33,7 +33,7 @@
                                 <li class="nav-item" role="presentation"><a class="nav-link">CONTACT</a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </nav>
             </div>
         </header>
@@ -44,6 +44,8 @@
             <p id="angleDisplay2">Paragraph</p>
         </div>
     </div>
+    <br>
+    <br>
     <div class="container main-content-container">
         <div class="row main-content-start" id="basic-introduction-row">
             <div class="col-md-5">
@@ -53,7 +55,7 @@
                 <h4 class="project-defintion-heading">A visualization of algorithms involved in Robotics</h4>
                 <p class="type-para">Type | Part of the final year project, Jan 2017</p>
                 <p class="role-para">My Roles | Algorithm Reserach, Comprative Study and JavaScript Development</p>
-                <p class="team-para">Team | Mohana Saraf, Shrey Shah</p>
+                <!-- <p class="team-para">Team | Mohana Saraf</p> -->
             </div>
         </div>
         <div class="row definition-row">
