--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body style="font-family: 'Josefin Sans', sans-serif;">
     <div class="container-fluid">
         <header class="text-center site-header">
-            <div class="text-center" id="logo">
+           <!--  <div class="text-center" id="logo">
                 <h1 class="logo"><a id="logo-link" href="http://mohanasaraf.github.io/">mohana saraf</a></h1>
-            </div>
+            </div> -->
             <div class="text-center" id="top-nav">
                 <nav class="navbar navbar-light navbar-expand-sm">
                     <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span>MENU</span></button>
@@ -68,14 +68,14 @@
             </div>
         </section>
     </main>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <footer>
             <div class="text-center social-media-icons"><a href="https://www.linkedin.com/in/mohana-saraf-026889103" target="_blank"><i class="fa fa-linkedin social-icon"></i></a><a href="https://www.instagram.com/mohanasaraf/" target="_blank"><i class="fa fa-instagram social-icon"></i></a><a href="https://medium.com/@mohanasaraf"
                     target="_blank"><i class="fab fa-medium-m social-icon"></i></a></div>
             <div class="text-center" id="copyright"><span><i class="fa fa-copyright"></i>&nbsp;2019 Mohana Saraf</span></div>
         </footer>
 
-    </div>
+    </div> -->
     
   
     <script src="assets/js/jquery.min.js"></script>
